--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bill_new2?useUnicode=true&amp;characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.10.16:3306/luo_test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 
