--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,42 @@
-spring.datasource.url=jdbc:mysql://192.168.10.16:3306/luo_test?useUnicode=true&characterEncoding=utf8
+#spring.datasource.url=jdbc:mysql://192.168.10.16:3306/luo_test?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/luo_test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.maxActive=20
-spring.datasource.initialSize=1
-spring.datasource.minIdle=3
-spring.datasource.removeAbandoned=true
-spring.datasource.removeAbandonedTimeout=true
-spring.datasource.maxWait=60000
+#spring.datasource.maxActive=20
+#spring.datasource.initialSize=1
+#spring.datasource.minIdle=3
+#spring.datasource.removeAbandoned=true
+#spring.datasource.removeAbandonedTimeout=1
+#spring.datasource.maxWait=60000
+
+#60 sec
+spring.datasource.hikari.connection-timeout=60000
+# max 5
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+
+########################################################
+###REDIS (RedisProperties) redis\u57fa\u672c\u914d\u7f6e\uff1b
+########################################################
+# database name
+spring.redis.database=0
+# server host1
+spring.redis.host=localhost 
+# server password
+#spring.redis.password= 
+#connection port
+spring.redis.port=6379
+# pool settings ...
+spring.redis.pool.max-idle=8 
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+# name of Redis server
+#spring.redis.sentinel.master= 
+# comma-separated list of host:port pairs
+#spring.redis.sentinel.nodes= 
+
