--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,22 +1,52 @@
-### set log levels ###
-log4j.logger.org.springframework=DEBUG,console,stdout,bill
-#log4j.rootLogger = DEBUG,stdout , bill
+#### set log levels ###
+#log4j.logger.org.springframework=DEBUG,console,stdout,bill
+##log4j.rootLogger = DEBUG,stdout , bill
+#
+####  output to the console ###
+#log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.Target = System.out
+#log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+#log4j.appender.stdout.Threshold = DEBUG
+##log4j.appender.stdout.layout.ConversionPattern = %d{ABSOLUTE} %5p %c{ 1 }:%L - %m%n
+#log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p]:%L  %m%n
+# 
+#### Output to the log file ###
+#log4j.appender.bill = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.bill.File = ../logs/bill.log
+#log4j.appender.bill.Append = true
+#log4j.appender.bill.Threshold = DEBUG
+##log4j.appender.bill.Threshold = RELEASE
+#log4j.appender.bill.layout = org.apache.log4j.PatternLayout
+#log4j.appender.bill.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
 
-###  output to the console ###
-log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.Threshold = DEBUG
-#log4j.appender.stdout.layout.ConversionPattern = %d{ABSOLUTE} %5p %c{ 1 }:%L - %m%n
-log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p]:%L  %m%n
- 
-### Output to the log file ###
-log4j.appender.bill = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bill.File = ../logs/bill.log
-log4j.appender.bill.Append = true
-log4j.appender.bill.Threshold = DEBUG
-#log4j.appender.bill.Threshold = RELEASE
-log4j.appender.bill.layout = org.apache.log4j.PatternLayout
-log4j.appender.bill.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+
+
+
+# Format is "<default threshold> (, <appender>)+
+
+# root
+log4j.rootLogger=DEBUG,CONSOLE,R
+
+#console
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} [myid:%X{myid}] - %-5p [%t:%C{1}@%L] - %m%n
+
+#
+# Add ROLLINGFILE to rootLogger to get log file output
+#    Log DEBUG level and above messages to a log file
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.Threshold=ERROR
+#log4j.appender.R.File=/Users/gei/Documents/test1.log
+log4j.appender.R.File=/home/gei/logs/kaoqin.log
+
+# Max log file size of 10MB
+log4j.appender.R.MaxFileSize=10MB
+# uncomment the next line to limit number of backup files
+#log4j.appender.ROLLINGFILE.MaxBackupIndex=10
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%d{ISO8601} [myid:%X{myid}] - %-5p [%t:%C{1}@%L] - %m%n
+
 
 
