--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-#spring.datasource.url=jdbc:mysql://192.168.10.16:3306/luo_test?useUnicode=true&characterEncoding=utf8
-spring.datasource.url=jdbc:mysql://localhost:3306/luo_test
+spring.datasource.url=jdbc:mysql://192.168.10.16:3306/luo_test?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring.datasource.maxActive=20
@@ -12,11 +11,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.maxWait=60000
 
 #60 sec
-spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.connection-timeout=60000
 # max 5
-spring.datasource.hikari.maximum-pool-size=5
+#spring.datasource.hikari.maximum-pool-size=5
 
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 
 ########################################################
@@ -25,7 +24,8 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # database name
 spring.redis.database=0
 # server host1
-spring.redis.host=localhost 
+#spring.redis.host=localhost 
+spring.redis.host=192.168.10.14
 # server password
 #spring.redis.password= 
 #connection port
